add targets to run performance tests some test fixes added memory leak tests